--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular-boilerplate",
-  "version": "2.2.0",
+  "name": "ng-weather-radar",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "prepare": "husky install",
