--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
-  "*.{js,ts}": ["ng-lint-staged lint --fix --", "prettier --write"],
+  "*.{js,ts}": "ng-lint-staged lint --fix --",
   "*.{css,html,js,json,md,scss,ts}": "prettier --write"
 }
