build: added scully as SSG

--- a/.prettierignore
+++ b/.prettierignore
@@ -46,3 +46,11 @@ Thumbs.db
 
 # Code archive
 .archive
+
+# Scully
+scully.log
+scullyStats.json
+.scully
+/scully/**/*.js
+/scully/**/*.js.map
+/scully/**/*.d.ts
