--- a/.eslintignore
+++ b/.eslintignore
@@ -44,6 +44,14 @@ testem.log
 .DS_Store
 Thumbs.db
 
+# Scully
+scully.log
+scullyStats.json
+.scully
+/scully/**/*.js
+/scully/**/*.js.map
+/scully/**/*.d.ts
+
 # User defined
 .archive
 package.json
