--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,14 @@ testem.log
 .DS_Store
 Thumbs.db
 
+# Scully
+scully.log
+scullyStats.json
+.scully
+/scully/**/*.js
+/scully/**/*.js.map
+/scully/**/*.d.ts
+
 # User defined
 .archive
 src/**/version-info.*
