--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "format:fix": "prettier --write ./**/*.{css,html,js,json,md,scss,ts}",
     "tool:commit": "cz",
     "tool:version-info-gen": "node tools/version-info-gen/version-info-gen.tool.ts",
-    "tool:changelog": "conventional-changelog -p conventionalcommits -i CHANGELOG.md -s -r 0"
+    "tool:changelog": "conventional-changelog -p conventionalcommits -i CHANGELOG.md -s -r 0",
+    "pretool:scully": "npm run build",
+    "tool:scully": "npx scully --project=ng-weather-radar --scanRoutes",
+    "pretool:scully::serve": "npm run tool:scully",
+    "tool:scully::serve": "npx scully serve --project=ng-weather-radar"
   },
   "dependencies": {
     "@angular/animations": "^16.2.1",
@@ -33,6 +37,10 @@
     "@angular/platform-browser": "^16.2.1",
     "@angular/platform-browser-dynamic": "^16.2.1",
     "@angular/router": "^16.2.1",
+    "@scullyio/init": "^2.1.41",
+    "@scullyio/ng-lib": "^2.1.0",
+    "@scullyio/scully": "^2.1.0",
+    "@scullyio/scully-plugin-puppeteer": "^2.1.0",
     "rxjs": "^6.6.0",
     "tslib": "^2.6.1",
     "zone.js": "^0.13.1"
@@ -78,6 +86,7 @@
     "lint-staged": "^14.0.0",
     "ng-lint-staged": "^12.0.4",
     "prettier": "^3.0.2",
+    "scully-plugin-minify-html": "^6.0.0",
     "typescript": "^4.9.5"
   }
 }
