chore: added firebase hosting

--- a/.eslintignore
+++ b/.eslintignore
@@ -51,6 +51,10 @@ scullyStats.json
 /scully/**/*.js
 /scully/**/*.js.map
 /scully/**/*.d.ts
+**/scully-routes.json
+
+# Firebase
+.firebase
 
 # User defined
 .archive
