--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
   "eslint.format.enable": true,
   "eslint.enable": true,
   "files.associations": {
-    ".czrc": "json"
+    ".czrc": "json",
+    ".firebaserc": "json"
   }
 }
