--- a/.github/workflows/pull-request-main.yml
+++ b/.github/workflows/pull-request-main.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Run static-pages build check
         run: npm run tool:scully
 
-  build_and_preview:
+  build_and_deploy_testbed_preview:
     if: "${{ github.event.pull_request.head.repo.full_name == github.repository }}"
     name: Build and deploy on Firebase - testbed preview
     needs: [inspection_and_tests]
@@ -37,6 +37,8 @@ jobs:
       matrix:
         operating-system: [ubuntu-latest]
         node: ["18"]
+    env:
+      OPENWEATHERMAP_API_KEY: ${{ secrets.OPENWEATHERMAP_API_KEY }}
     steps:
       - uses: actions/checkout@v3
       - name: Setup Node.js ${{ matrix.node }}
@@ -47,7 +49,8 @@ jobs:
         run: npm ci
       - name: Build static files
         run: npm run tool:scully
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      - name: Deploy on Firebase - testbed preview
+        uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_WEATHER_RADAR_C13DF }}"
