--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Run static-pages build check
         run: npm run tool:scully
 
-  build_and_deploy:
+  build_and_deploy_testbed:
     name: Build and deploy on Firebase - testbed
     needs: [inspection_and_tests]
     runs-on: ${{ matrix.operating-system }}
@@ -36,6 +36,8 @@ jobs:
       matrix:
         operating-system: [ubuntu-latest]
         node: ["18"]
+    env:
+      OPENWEATHERMAP_API_KEY: ${{ secrets.OPENWEATHERMAP_API_KEY }}
     steps:
       - uses: actions/checkout@v3
       - name: Setup Node.js ${{ matrix.node }}
@@ -46,7 +48,8 @@ jobs:
         run: npm ci
       - name: Build static files
         run: npm run tool:scully
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      - name: Deploy on Firebase - testbed
+        uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_WEATHER_RADAR_C13DF }}"
