--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
   "eslint.enable": true,
   "files.associations": {
     ".czrc": "json",
-    ".firebaserc": "json"
+    ".firebaserc": "json",
+    ".secrets.baseline": "json"
   }
 }
