--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "format:check": "prettier --check ./**/*.{css,html,js,json,md,scss,ts}",
     "format:fix": "prettier --write ./**/*.{css,html,js,json,md,scss,ts}",
     "tool:commit": "cz",
+    "tool:set-env": "node tools/set-env/set-env.tool.ts",
     "tool:version-info-gen": "node tools/version-info-gen/version-info-gen.tool.ts",
     "tool:changelog": "conventional-changelog -p conventionalcommits -i CHANGELOG.md -s -r 0",
     "pretool:scully": "npm run build",
@@ -41,6 +42,8 @@
     "@scullyio/ng-lib": "^2.1.0",
     "@scullyio/scully": "^2.1.0",
     "@scullyio/scully-plugin-puppeteer": "^2.1.0",
+    "dotenv": "^16.3.1",
+    "replace-in-file": "^7.0.1",
     "rxjs": "^6.6.0",
     "tslib": "^2.6.1",
     "zone.js": "^0.13.1"
@@ -64,6 +67,7 @@
     "commander": "^8.3.0",
     "conventional-changelog-cli": "^3.0.0",
     "cz-conventional-changelog": "^3.3.0",
+    "detect-secrets": "^1.0.6",
     "eslint": "^8.47.0",
     "eslint-config-ngx": "^1.1.0",
     "eslint-config-prettier": "^9.0.0",
