chore: misc changes

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -14,6 +14,8 @@ jobs:
       matrix:
         operating-system: [ubuntu-latest, windows-latest]
         node: ["16", "18"]
+    env:
+      OPENWEATHERMAP_API_KEY: ${{ secrets.OPENWEATHERMAP_API_KEY }}
     steps:
       - uses: actions/checkout@master
       - name: Setup Node.js ${{ matrix.node }}
