--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "ng": "ng",
     "build": "npm run build:prod::app",
     "test": "ng test",
-    "preserve::app": "npm run tool:version-info-gen -- --dev",
+    "preserve::app": "npm run tool:version-info-gen -- --dev && npm run tool:set-env",
     "serve::app": "ng serve --port 5010",
-    "prebuild:prod::app": "npm run tool:version-info-gen",
+    "prebuild:prod::app": "npm run tool:version-info-gen && npm run tool:set-env",
     "build:prod::app": "ng build",
     "lint": "ng lint",
     "lint:fix": "ng lint --fix",
