--- a/package.json
+++ b/package.json
@@ -28,69 +28,76 @@
     "tool:scully::serve": "npx scully serve --project=ng-weather-radar"
   },
   "dependencies": {
-    "@angular/animations": "^16.2.1",
-    "@angular/cdk": "^16.2.1",
-    "@angular/common": "^16.2.1",
-    "@angular/compiler": "^16.2.1",
-    "@angular/core": "^16.2.1",
-    "@angular/forms": "^16.2.1",
-    "@angular/material": "^16.2.1",
-    "@angular/platform-browser": "^16.2.1",
-    "@angular/platform-browser-dynamic": "^16.2.1",
-    "@angular/router": "^16.2.1",
+    "@angular/animations": "^16.2.5",
+    "@angular/cdk": "^16.2.4",
+    "@angular/common": "^16.2.5",
+    "@angular/compiler": "^16.2.5",
+    "@angular/core": "^16.2.5",
+    "@angular/forms": "^16.2.5",
+    "@angular/material": "^16.2.4",
+    "@angular/platform-browser": "^16.2.5",
+    "@angular/platform-browser-dynamic": "^16.2.5",
+    "@angular/router": "^16.2.5",
+    "@fortawesome/angular-fontawesome": "^0.13.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@scullyio/init": "^2.1.41",
     "@scullyio/ng-lib": "^2.1.0",
     "@scullyio/scully": "^2.1.0",
     "@scullyio/scully-plugin-puppeteer": "^2.1.0",
     "dotenv": "^16.3.1",
+    "hamburgers": "^1.2.1",
+    "localforage": "^1.10.0",
     "replace-in-file": "^7.0.1",
     "rxjs": "^6.6.0",
-    "tslib": "^2.6.1",
+    "scully-plugin-minify-html": "^6.0.0",
+    "tslib": "^2.6.2",
     "zone.js": "^0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.0",
-    "@angular-eslint/builder": "^16.1.0",
-    "@angular-eslint/eslint-plugin": "^16.1.0",
-    "@angular-eslint/eslint-plugin-template": "^16.1.0",
-    "@angular-eslint/schematics": "^16.1.0",
-    "@angular-eslint/template-parser": "^16.1.0",
-    "@angular/cli": "^16.2.0",
-    "@angular/compiler-cli": "^16.2.1",
+    "@angular-devkit/build-angular": "^16.2.2",
+    "@angular-eslint/builder": "^16.2.0",
+    "@angular-eslint/eslint-plugin": "^16.2.0",
+    "@angular-eslint/eslint-plugin-template": "^16.2.0",
+    "@angular-eslint/schematics": "^16.2.0",
+    "@angular-eslint/template-parser": "^16.2.0",
+    "@angular/cli": "^16.2.2",
+    "@angular/compiler-cli": "^16.2.5",
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
-    "@types/jasmine": "^4.3.5",
-    "@types/node": "^18.17.5",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "^6.4.0",
+    "@types/jasmine": "^4.3.6",
+    "@types/node": "^20.6.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
     "chalk": "^4.1.2",
-    "commander": "^8.3.0",
-    "conventional-changelog-cli": "^3.0.0",
+    "commander": "^11.0.0",
+    "conventional-changelog-cli": "^4.1.0",
     "cz-conventional-changelog": "^3.3.0",
     "detect-secrets": "^1.0.6",
-    "eslint": "^8.47.0",
-    "eslint-config-ngx": "^1.1.0",
+    "eslint": "^8.49.0",
+    "eslint-config-ngx": "^2.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-typescript": "^3.6.0",
-    "eslint-plugin-cypress": "^2.14.0",
-    "eslint-plugin-deprecation": "^1.5.0",
-    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-cypress": "^2.15.1",
+    "eslint-plugin-deprecation": "^2.0.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jasmine": "^4.1.3",
-    "eslint-plugin-jsdoc": "^46.4.6",
+    "eslint-plugin-jsdoc": "^46.8.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "husky": "^8.0.3",
-    "jasmine-core": "^5.1.0",
+    "jasmine-core": "^5.1.1",
     "karma": "^6.3.6",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "^2.2.1",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "lint-staged": "^14.0.0",
+    "lint-staged": "^14.0.1",
     "ng-lint-staged": "^12.0.4",
-    "prettier": "^3.0.2",
-    "scully-plugin-minify-html": "^6.0.0",
+    "prettier": "^3.0.3",
     "typescript": "^4.9.5"
   }
 }
