ci: fixed lint and format scripts

--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "serve::app": "ng serve --port 5010",
     "prebuild:prod::app": "npm run tool:version-info-gen && npm run tool:set-env",
     "build:prod::app": "ng build",
+    "prelint": "npm run tool:version-info-gen -- --dev",
     "lint": "ng lint",
+    "prelint:fix": "npm run tool:version-info-gen -- --dev",
     "lint:fix": "ng lint --fix",
+    "preformat": "npm run tool:version-info-gen -- --dev",
     "format": "prettier *.{css,html,js,json,md,scss,ts}",
+    "preformat:check": "npm run tool:version-info-gen -- --dev",
     "format:check": "prettier --check ./**/*.{css,html,js,json,md,scss,ts}",
+    "preformat:fix": "npm run tool:version-info-gen -- --dev",
     "format:fix": "prettier --write ./**/*.{css,html,js,json,md,scss,ts}",
     "tool:commit": "cz",
     "tool:set-env": "node tools/set-env/set-env.tool.ts",
